Projet GL/test/src/test/deca/context/invalid/increment2/int-minus-bool.deca
// Test int := -bool

// Historique : cree le 11/01/2023

{
    int a = -true;
}